fix whitespace lines on dialogs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,7 @@ html,body {
     font-weight: bold;
     color: #f00;
 }
+
+.ws-pl {
+    white-space: pre-line
+}
